vlib/v/parser/tests/fixed_array_init_result_err.out
vlib/v/parser/tests/fixed_array_init_result_err.vv:1:8: error: fixed arrays do not support storing Result values
    1 | _ = [3]!int{}
      |        ^
