vlib/v/parser/tests/fixed_array_init_result_err.vv
_ = [3]!int{}
